<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/main_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:indeterminate="true"
            android:visibility="invisible"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:visibility="visible"/>

    <TextView
            android:id="@+id/title_text"
            android:text="@string/calendar_google_drive_title"
            android:textSize="24sp"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/main_progress"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/google_drive_status_message"
            android:text="@string/calendar_google_drive_disconnected"
            android:textSize="16sp"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/button_sign_in"
            android:text="Sign In with Google"
            android:textSize="18sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@id/google_drive_status_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/button_compare"
            android:text="@string/calendar_cloud_compare_button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/button_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
            android:id="@+id/google_drive_background_sync"
            android:text="@string/calendar_google_drive_background_sync"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@id/button_compare"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <View
            android:id="@+id/hr2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="#808080"

            app:layout_constraintTop_toBottomOf="@id/google_drive_background_sync"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <RelativeLayout
            android:id="@+id/sync_list_view_layout"

            android:layout_width="match_parent"
            android:layout_height="0dp"

            app:layout_constraintTop_toBottomOf="@id/hr2"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sync_list_view"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                tools:listitem="@layout/list_item_calendar_sync"/>

        <TextView
                android:id="@+id/sync_list_empty"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center"
                android:text="@string/calendar_google_drive_nothing_to_sync"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
